# Multi_Agent_PaperReview

./: .gitignore  CONTEXT.md  INSPECTION_REPORT.md  MinerU安装配置教程.html  README.md  compare.py  eval_models.py  prepare_data.py  pyproject.toml  report.md  requirements.txt  开题报告.md
.claude/: settings.local.json
agents/: __init__.py  base.py  coordinator.py  memory.py  orchestrator.py  pipeline.py  specialized.py  tools.py
docs/adr/: 0001-llm-vs-small-model-comparison.md
models/classifier/: README.md  __init__.py  dataset.py  scibert_classifier.py
models/extraction/: __init__.py  dataset.py  ner_model.py  paper_extractor.py  re_model.py
models/retrieval/: __init__.py  encoder.py  faiss_index.py  paper_retriever.py
models/summarizer/: __init__.py  dataset.py  extractive.py  generative.py  paper_summarizer.py  review_generator.py
outputs/: comparison_report.json  evaluation_results.json
processed_data/PeerRead_processed_data/: README_PEERREAD.md
processed_data/arxiv_PeerRead_merge_data/: README_MERGED.md
processed_data/sciTLDR_data/: README_SCITLDR.md
processed_data/scierc_ner_re/: README_SCIERC.md  ner_dev.jsonl  ner_test.jsonl  ner_train.jsonl  re_dev.jsonl  re_test.jsonl  re_train.jsonl
scripts/: PeerRead_processed.py  agent_demo.py  arxiv_PeerRead_merge.py  arxiv_processed.py  scierc_processed.py
src/classifier/: dataset.py  model.py
src/llm/: client.py  (+1 more)
tests/: test_classifier.py  test_llm.py  test_ner.py  test_preprocessing.py  test_summarizer.py
train/: __init__.py  train_classifier.py  train_ner.py
utils/: classifier_utils.py  metrics.py
(+43 files in other folders)
