[project]
name = "multi-agent-paperreview"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "pymupdf>=1.23",
    "openai>=1.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "tqdm>=4.65",
    "datasets>=2.14,<3.0",
    "rouge-score>=0.1",
    "bert-score>=0.3",
    "pytorch-crf>=0.7",
    "sentence-transformers>=2.2",
    "pytest>=8.0",
    "reportlab>=4.0",
    "seqeval>=1.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
